# keystache

./: .eslintrc.cjs  .gitignore  Cargo.toml  LICENSE  README.md  bun.lockb  components.json  diesel.toml  package-lock.json  package.json  prettier.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: dev-ci.yml
migrations/2024-06-05-152445_create_nostr_keys/: down.sql  up.sql
migrations/2024-08-22-234121_create_nostr_relays/: down.sql  up.sql
src/: App.tsx  app.rs  fedimint.rs  main.rs  main.tsx  nostr.rs  tauriCommands.ts  util.rs
src-tauri/: Cargo.toml  nostr_keys.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs
src/components/auth/: ProtectedRoute.tsx
src/components/header/: Header.tsx
src/components/profile/: Profile.tsx
src/components/theme/: mode-toggle.tsx  theme-provider.tsx
src/components/ui/: dialog.tsx
src/components/zaps/: QRCodeModal.tsx  QRCodeModalTrigger.tsx
src/db/: mod.rs  model.rs  schema.rs
src/lib/: nostr.ts
src/pages/: HomePage.tsx  LoginPage.tsx
src/routes/: add_nostr_keypair.rs  bitcoin_wallet.rs  home.rs  mod.rs  nostr_keypairs.rs  nostr_relays.rs  settings.rs  unlock.rs
src/routes/bitcoin_wallet/: add.rs  federation_details.rs  federations.rs  receive.rs  send.rs
src/routes/bitcoin_wallet/federations/: add.rs  federation_details.rs  list.rs
src/store/: index.ts
src/types/: index.ts  window.d.ts
src/ui_components/: button.rs  icon.rs  mod.rs  sidebar.rs  toast.rs
