[package]
name = "keystache"
version = "0.0.0"
description = "A Nostr key management app for desktop"
authors = ["The Node-Tec Team"]
edition = "2021"

[package.metadata.bundle]
name = "Keystache"
identifier = "co.nodetec.keystache"
icon = ["assets/app_icons/**/*.png"]
resources = ["assets/fonts/**/*.*"]

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.81"
chrono = { version = "0.4.34", features = ["alloc"] }
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "5.0.1"
fedimint-api-client = "0.4.0"
fedimint-core = "0.4.0"
iced = { git = "https://github.com/iced-rs/iced", rev = "b30d34f", features = [
    "advanced",
    "svg",
    "tokio",
] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled-sqlcipher"] }
nip-55 = "0.6.0"
nostr-sdk = "0.30.0"
palette = "0.7.6"
secp256k1 = { version = "0.28.2", features = ["global-context"] }
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile = "3.10.0"
