[package]
name = "keystache"
version = "0.0.0"
description = "A Nostr key management app for desktop"
authors = ["The Node-Tec Team"]
edition = "2021"

[package.metadata.bundle]
name = "Keystache"
identifier = "co.nodetec.keystache"
icon = ["assets/app_icons/**/*.png"]
resources = ["assets/fonts/**/*.*"]

[dependencies]
anyhow = "1.0.80"
arboard = { version = "3.4.0", default-features = false }
async-stream = "0.3.5"
async-trait = "0.1.81"
chrono = { version = "0.4.34", features = ["alloc"] }
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
directories = "5.0.1"
fedimint-api-client = "0.4.0"
fedimint-bip39 = "0.4.0"
fedimint-client = "0.4.0"
fedimint-core = "0.4.0"
fedimint-ln-client = "0.4.0"
fedimint-ln-common = "0.4.0"
fedimint-mint-client = "0.4.0"
fedimint-rocksdb = "0.4.0"
iced = { git = "https://github.com/iced-rs/iced", rev = "e50aa03", features = [
    "advanced",
    "qr_code",
    "svg",
    "tokio",
] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled-sqlcipher"] }
lightning-invoice = "0.31.0"
nip-55 = "0.6.0"
nostr-sdk = "0.30.0"
palette = "0.7.6"
secp256k1 = { version = "0.28.2", features = ["global-context"] }
tokio = "1.39.3"
tracing-subscriber = "0.3.18"

[dev-dependencies]
tempfile = "3.10.0"

# Optimization of these deps significantly speeds
# up communication with fedimint federations.
[profile.dev.package]
bls12_381 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
