[package]
name = "keystache"
version = "0.0.0"
description = "A Nostr key management app for desktop"
authors = ["The Resolvr Team"]
edition = "2021"

[dependencies]
async-trait = "0.1.77"
lightning-invoice = "0.29.0"
nip-70 = "0.4.3"
nostr-sdk = "0.27.0"
secp256k1 = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }
tokio = "1.36.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
# This is used for production builds or when `devPath` points to the filesystem. DO NOT REMOVE!
custom-protocol = ["tauri/custom-protocol"]
