[package]
name = "keystache"
version = "0.0.0"
description = "A Nostr key management app for desktop"
authors = ["The Resolvr Team"]
edition = "2021"

[dependencies]
anyhow = "1.0.80"
async-trait = "0.1.77"
chrono = { version = "0.4.34", features = ["alloc"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled-sqlcipher"] }
nip-70 = "0.5.0"
nostr-sdk = "0.27.0"
rusqlite = { version = "0.31.0", features = ["bundled-sqlcipher"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }
tokio = "1.36.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dev-dependencies]
tempfile = "3.10.0"

[features]
# This is used for production builds or when `devPath` points to the filesystem. DO NOT REMOVE!
custom-protocol = ["tauri/custom-protocol"]
